--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-Backend_URL = https://cback-flame.vercel.app/
+BBackend_URL = https://cback-flame.vercel.app/
+REACT_APP_BACKEND_URL=https://cback-flame.vercel.app/
