--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^17.2.1",
     "hamburger-react": "^2.5.2",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.544.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
